data/derived/comb/progs/unify/prog8824.ml.out
Characters 13-45:
  let _ = eval (ThreeAverage(VarX, VarY, VarZ)), 0.5, 0.3, 0.5;;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
